// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component should be a subtitle with size rendered as P 1`] = `
<p
  className="is-3 subtitle"
>
  Subtitle
</p>
`;

exports[`Title component should be spaced 1`] = `
<p
  className="is-spaced title"
>
  Subtitle
</p>
`;

exports[`Title component should concat classname in props with Bulma classname 1`] = `
<h1
  className="other-class this-is-a-test title"
>
  <p>
    Default
  </p>
</h1>
`;

exports[`Title component should exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "defaultProps": Object {
    "as": "h1",
    "heading": false,
    "spaced": false,
    "subtitle": false,
  },
  "render": [Function],
}
`;

exports[`Title component should have title classname 1`] = `
<h1
  className="title"
>
  Test 
  <a>
    Give me
  </a>
</h1>
`;

exports[`Title component should not be spaced because is subtitle 1`] = `
<p
  className="subtitle"
>
  Subtitle
</p>
`;

exports[`Title component should use inline styles 1`] = `
<h1
  className="title"
  style={
    Object {
      "height": 250,
    }
  }
>
  <p>
    Default
  </p>
</h1>
`;
